# django-template

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  pyproject.toml
{{cookiecutter.project_slug}}/config/: asgi.py  settings.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/config/settings/: base.py  local.py  production.py
